// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QRCode /> renders a QRCode 1`] = `
<div
  className="qrcode-wrapper "
  style={{}}
>
  <canvas
    className="qrcode-canvas"
  />
</div>
`;

exports[`<QRCode /> renders a QRCode with a custom scale 1`] = `
<div
  className="qrcode-wrapper "
  style={{}}
>
  <canvas
    className="qrcode-canvas"
  />
</div>
`;

exports[`<QRCode /> renders a QRCode with custom text 1`] = `
<div
  className="qrcode-wrapper "
  style={{}}
>
  <canvas
    className="qrcode-canvas"
  />
</div>
`;

exports[`<QRCode /> renders a centered QRCode 1`] = `
<div
  className="qrcode-wrapper center"
  style={{}}
>
  <canvas
    className="qrcode-canvas"
  />
</div>
`;
